--- a/src/app/cal-info/cal-info.component.html
+++ b/src/app/cal-info/cal-info.component.html
@@ -1,68 +1,88 @@
 <div class="grid container h-screen">
+  <div class="col-12">
+    <div><app-menu [name]="name"></app-menu></div>
+  </div>
 
-    <div class="col-12">
-        <div><app-menu [name]="name"></app-menu></div>
+  <div class="col-12">
+    <div class="text-center font-bold text-white center">
+      <h2>คำนวณสารอาหาร</h2>
     </div>
+  </div>
 
-    <div class="col-12">
-        <div class="text-center font-bold text-white center">
-          <h2>คำนวณสารอาหาร</h2>
+  <div class="col-12">
+    <div class="grid">
+      <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
+        <div class="contentlogo item-center">
+          <div class="contentlogo">
+            <img
+              src="assets/PNG/calInfo.jpg"
+              class="png"
+              style="width: 350px; height: auto"
+            />
+          </div>
         </div>
-    </div>
 
-    <div class="col-12">
-        <div class="grid">
-            <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
-                <div class="contentlogo item-center">
-                    <div class="contentlogo">
-                        <img src="assets/PNG/calInfo.jpg" class="png" style="width: 350px; height: auto;" />
-                    </div>
-                </div>
-        
-                <div class="item-center content">
-                    <div class="content text-center">
-                        <p-card p-card class="font-card">
-                            <h1>คำนวณสารอาหาร ช่วยอะไร?</h1>
-                            <p style="color: black;">
-                                การคำนวณสารอาหารเป็นสิ่งสำคัญสำหรับการบรรลุเป้าหมายการออกกำลังกาย
-                                ไม่ว่าจะเป็นการเพิ่มกล้ามเนื้อ, การลดไขมัน หรือการรักษามวลกล้ามเนื้อ
-                                การเลือกอาหารที่ให้สารอาหารที่ครบถ้วนในสัดส่วนที่เหมาะสมเป็นกุญแจสู่ความสำเร็จในการพัฒนาร่างกาย
-                                โปรตีนเป็นสารอาหารที่สำคัญสำหรับการเพิ่มและรักษากล้ามเนื้อ
-                                ในขณะที่ไขมันและคาร์โบไฮเดรตที่ดีมีบทบาทสำคัญในการให้พลังงานและช่วยเสริมสร้างการทำงานของร่างกาย
-                                การคำนวณสารอาหารอย่างถูกต้องควรเริ่มต้นจากการรู้ปริมาณพลังงานที่ร่างกายต้องการต่อวัน (TDEE)
-                                และจากนั้นกำหนดสัดส่วนของโปรตีน, คาร์โบไฮเดรต และไขมันที่เหมาะสมตามเป้าหมาย
-                                การคำนวณเหล่านี้ช่วยให้คุณสามารถปรับการบริโภคอาหารให้สอดคล้องกับเป้าหมายการออกกำลังกาย
-                                และส่งเสริมผลลัพธ์ที่ดีขึ้นอย่างมีประสิทธิภาพ"</p>
-                            <div class="button-card card">
-                                <p-button label="กลับหน้าหลัก" [text]="true" [raised]="true" severity="secondary"
-                                    (click)="gohome()" class="custom-button-white" />
-                                <p-button label="ทดลอง" [text]="true" [raised]="true" class="custom-button-red"
-                                    (click)="gocalfood()" />
-                            </div>
-                        </p-card>
-                    </div>
-                </div>
-            </div>
-            <div class="background-156">
-                <div class="content">
-                    <div>
-                        <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
-                        <p>เกี่ยวกับเรา</p>
-                        <p>ติดต่อเรา</p>
-                        <p>ทำไมต้องเลือกเรา</p>
-                    </div>
-                </div>
-    
-                <div class="content">
-                    <div>
-                        <h3 class="text-left-underline">สมาชิก</h3>
-                        <p>สิทธิพิเศษของสมาชิก</p>
-                        <p>กฎระเบียบการใช้งาน</p>
-                        <p>โปรโมชั่น</p>
-                        <p>สมัครสมาชิก</p>
-                    </div>
-                </div>
-            </div>
+        <div class="item-center content">
+          <div class="content text-center">
+            <p-card p-card class="font-card">
+              <h1>คำนวณสารอาหาร ช่วยอะไร?</h1>
+              <p style="color: black">
+                การคำนวณสารอาหารเป็นสิ่งสำคัญสำหรับการบรรลุเป้าหมายการออกกำลังกาย
+                ไม่ว่าจะเป็นการเพิ่มกล้ามเนื้อ, การลดไขมัน
+                หรือการรักษามวลกล้ามเนื้อ
+                การเลือกอาหารที่ให้สารอาหารที่ครบถ้วนในสัดส่วนที่เหมาะสมเป็นกุญแจสู่ความสำเร็จในการพัฒนาร่างกาย
+                โปรตีนเป็นสารอาหารที่สำคัญสำหรับการเพิ่มและรักษากล้ามเนื้อ
+                ในขณะที่ไขมันและคาร์โบไฮเดรตที่ดีมีบทบาทสำคัญในการให้พลังงานและช่วยเสริมสร้างการทำงานของร่างกาย
+                การคำนวณสารอาหารอย่างถูกต้องควรเริ่มต้นจากการรู้ปริมาณพลังงานที่ร่างกายต้องการต่อวัน
+                (TDEE) และจากนั้นกำหนดสัดส่วนของโปรตีน, คาร์โบไฮเดรต
+                และไขมันที่เหมาะสมตามเป้าหมาย
+                การคำนวณเหล่านี้ช่วยให้คุณสามารถปรับการบริโภคอาหารให้สอดคล้องกับเป้าหมายการออกกำลังกาย
+                และส่งเสริมผลลัพธ์ที่ดีขึ้นอย่างมีประสิทธิภาพ"
+              </p>
+              <div class="button-card card">
+                <p-button
+                  label="กลับหน้าหลัก"
+                  [text]="true"
+                  [raised]="true"
+                  severity="secondary"
+                  (click)="gohome()"
+                  class="custom-button-white"
+                />
+                <p-button
+                  label="ทดลอง"
+                  [text]="true"
+                  [raised]="true"
+                  class="custom-button-red"
+                  (click)="gocalfood()"
+                />
+              </div>
+            </p-card>
+          </div>
         </div>
+      </div>
+      <div class="background-156">
+        <div class="content">
+          <div>
+            <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+            <p>เกี่ยวกับเรา</p>
+            <p>ติดต่อเรา</p>
+            <p>ทำไมต้องเลือกเรา</p>
+          </div>
+        </div>
+
+        <div class="content">
+          <div>
+            <h3 class="text-left-underline">สมาชิก</h3>
+            <p>สิทธิพิเศษของสมาชิก</p>
+            <p>กฎระเบียบการใช้งาน</p>
+            <p>โปรโมชั่น</p>
+            <p>สมัครสมาชิก</p>
+          </div>
+        </div>
+        <div class="mt-auto flex align-items-center justify-content-center">
+          <img src="assets/PNG/Logo.png" class="png-menu" />
+        </div>
+      </div>
     </div>
+  </div>
 </div>
