--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="col-12">
     <div><app-menu [name]="name"></app-menu></div>
-  </div> 
+  </div>
 
   <div class="col-12">
     <div class="text-center font-bold text-white center">
@@ -128,6 +128,9 @@
         <p>โปรโมชั่น</p>
         <p>สมัครสมาชิก</p>
       </div>
+    </div>
+    <div class="mt-auto flex align-items-center justify-content-center">
+      <img src="assets/PNG/Logo.png" class="png-menu" />
     </div>
   </div>
 </div>
