--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -205,5 +205,8 @@
         <p>สมัครสมาชิก</p>
       </div>
     </div>
+    <div class="mt-auto flex align-items-center justify-content-center">
+      <img src="assets/PNG/Logo.png" class="png-menu" />
+    </div>
   </div>
 </div>
