--- a/src/app/trainer/trainer.component.html
+++ b/src/app/trainer/trainer.component.html
@@ -224,26 +224,29 @@
           </div>
       </p-card>
     </div>
-      <div class="background-156">
-        <div class="content">
-          <div>
-            <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
-            <p>เกี่ยวกับเรา</p>
-            <p>ติดต่อเรา</p>
-            <p>ทำไมต้องเลือกเรา</p>
-          </div>
-        </div>
-
-        <div class="content">
-          <div>
-            <h3 class="text-left-underline">สมาชิก</h3>
-            <p>สิทธิพิเศษของสมาชิก</p>
-            <p>กฎระเบียบการใช้งาน</p>
-            <p>โปรโมชั่น</p>
-            <p>สมัครสมาชิก</p>
-          </div>
-        </div>
+  <div class="background-156">
+    <div class="content">
+      <div>
+        <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+        <p>เกี่ยวกับเรา</p>
+        <p>ติดต่อเรา</p>
+        <p>ทำไมต้องเลือกเรา</p>
       </div>
+    </div>
+
+    <div class="content">
+      <div>
+        <h3 class="text-left-underline">สมาชิก</h3>
+        <p>สิทธิพิเศษของสมาชิก</p>
+        <p>กฎระเบียบการใช้งาน</p>
+        <p>โปรโมชั่น</p>
+        <p>สมัครสมาชิก</p>
+      </div>
+    </div>
+    <div class="mt-auto flex align-items-center justify-content-center">
+      <img src="assets/PNG/Logo.png" class="png-menu" />
+    </div>
+  </div>
   </div>
 </div>
 <!--dialog ยืนยันการสมัครสมาชิก -->
