--- a/src/app/coursetrain/coursetrain.component.html
+++ b/src/app/coursetrain/coursetrain.component.html
@@ -13,11 +13,7 @@
     <div class="grid">
       <div class="col-12 p-4 border-round-top-3xl surface-0 h-screen">
         <div class="grid flex flex-column justify-content-center">
-          <p-image
-            src="{{ this.state.src }}"
-            alt="Image"
-            width="60%"
-          >
+          <p-image src="{{ this.state.src }}" alt="Image" width="60%">
           </p-image>
         </div>
 
@@ -74,26 +70,29 @@
           </div>
         </div>
       </div>
-      <div class="background-156">
-        <div class="content">
-          <div>
-            <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
-            <p>เกี่ยวกับเรา</p>
-            <p>ติดต่อเรา</p>
-            <p>ทำไมต้องเลือกเรา</p>
-          </div>
-        </div>
-
-        <div class="content">
-          <div>
-            <h3 class="text-left-underline">สมาชิก</h3>
-            <p>สิทธิพิเศษของสมาชิก</p>
-            <p>กฎระเบียบการใช้งาน</p>
-            <p>โปรโมชั่น</p>
-            <p>สมัครสมาชิก</p>
-          </div>
-        </div>
+  <div class="background-156">
+    <div class="content">
+      <div>
+        <h3 class="text-left-underline">เกี่ยวกับพวกเรา</h3>
+        <p>เกี่ยวกับเรา</p>
+        <p>ติดต่อเรา</p>
+        <p>ทำไมต้องเลือกเรา</p>
       </div>
+    </div>
+
+    <div class="content">
+      <div>
+        <h3 class="text-left-underline">สมาชิก</h3>
+        <p>สิทธิพิเศษของสมาชิก</p>
+        <p>กฎระเบียบการใช้งาน</p>
+        <p>โปรโมชั่น</p>
+        <p>สมัครสมาชิก</p>
+      </div>
+    </div>
+    <div class="mt-auto flex align-items-center justify-content-center">
+      <img src="assets/PNG/Logo.png" class="png-menu" />
+    </div>
+  </div>
     </div>
   </div>
 </div>
@@ -112,7 +111,8 @@
     <p-button
       label="ตกลง"
       styleClass="confirm-button"
-      (click)="successful = false" [routerLink]="['/training']"
+      (click)="successful = false"
+      [routerLink]="['/training']"
     ></p-button>
   </div>
 </p-dialog>
