--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -65,10 +65,9 @@
           <p>แนบหลักฐานการชำระ</p>
           <div class="buttons">
             <button class="back-button">
-              <span class="circle">
-                <i class="pi pi-arrow-left"></i>
+              <span>
+                <i class="pi"></i>
               </span>
-              <span class="button-text">กลับหน้าต่างเดิม</span>
             </button>
             <p-button label="ชำระเงิน" styleClass="button-training" (click)="Payment(fileUpload)"></p-button>
           </div>
@@ -95,6 +94,9 @@
         <p>โปรโมชั่น</p>
         <p>สมัครสมาชิก</p>
       </div>
+    </div>
+    <div class="mt-auto flex align-items-center justify-content-center">
+      <img src="assets/PNG/Logo.png" class="png-menu" />
     </div>
   </div>
 </div>
@@ -135,6 +137,8 @@
       label="ตกลง"
       styleClass="confirm-button"
       (click)="successful = false"
+      [routerLink]="['/recfood']"
+
     ></p-button>
   </div>
 </p-dialog>
