--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -61,7 +61,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',5,'assets/program/Picture5.jpg')"
                       />
                     </div>
@@ -85,7 +85,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',8,'assets/program/Picture8.jpg')"
                       />
                     </div>
@@ -109,7 +109,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',10,'assets/program/Picture10.jpg')"
                       />
                     </div>
@@ -133,7 +133,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training "
+                      <p-button label="ชมคอส" styleClass="button-training "
                       (click)="goPageCoursetrain('เพิ่มกล้ามเนื้อ',12,'assets/program/Picture12.jpg')"
                       />
                     </div>
@@ -166,7 +166,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('ลดไขมัน',2,'assets/program/Picture2.jpg')"
                       />
                     </div>
@@ -190,7 +190,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('ลดไขมัน',4,'assets/program/Picture4.jpg')"
                       />
                     </div>
@@ -214,7 +214,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('ลดไขมัน',6,'assets/program/Picture6.jpg')"
 
                       />
@@ -239,7 +239,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('ลดไขมัน',11,'assets/program/Picture11.jpg')"
                       />
                     </div>
@@ -272,7 +272,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('น้ำหนักคงสภาพ',1,'assets/program/Picture1.jpg')"
                       />
                     </div>
@@ -296,7 +296,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('น้ำหนักคงสภาพ',7,'assets/program/Picture7.jpg')"
                       />
                     </div>
@@ -320,7 +320,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('น้ำหนักคงสภาพ',9,'assets/program/Picture9.jpg')"
                       />
                     </div>
@@ -344,7 +344,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('น้ำหนักคงสภาพ',3,'assets/program/Picture3.jpg')"
                       />
                     </div>
@@ -377,7 +377,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('พรีเมี่ยม',13,'assets/program/Picture13.jpg')"
                       />
                     </div>
@@ -401,7 +401,7 @@
                   </ng-template>
                   <ng-template pTemplate="footer">
                     <div class="flex justify-content-center gap-2 mt-4">
-                      <p-button label="สมัคร" styleClass="button-training"
+                      <p-button label="ชมคอส" styleClass="button-training"
                       (click)="goPageCoursetrain('พรีเมี่ยม',14,'assets/program/Picture14.jpg')"
                       />
                     </div>
@@ -463,7 +463,7 @@
         <p>สิทธิพิเศษของสมาชิก</p>
         <p>กฎระเบียบการใช้งาน</p>
         <p>โปรโมชั่น</p>
-        <p>สมัครสมาชิก</p>
+        <p>ชมคอสสมาชิก</p>
       </div>
     </div>
     <div class="mt-auto flex align-items-center justify-content-center">
