--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,12 @@
-<div class="grid container h-screen">
+<div class="grid-login-signup container h-screen">
   <div class="col-12">
     <div class="text-center font-bold text-white center">
       <h2>Login</h2>
     </div>
   </div>
 
-  <div class="margin bg-white bg-login">
+  <div class="bg-white bg-login">
     <div class="margin">
-      <br />
       <form [formGroup]="signIn" class="flex flex-column">
         <div class="margin">
           <div class="flex flex-column">
