--- a/src/app/trainer/trainer.component.html
+++ b/src/app/trainer/trainer.component.html
@@ -84,7 +84,7 @@
                   </div>
                   <div style="flex: 2; padding-left: 1rem">
                       <p class="p-bold">
-                          ชื่อ-นามสกุล <strong>: นายกฤษฎา นลินรัตน์พิพัฒน์</strong>
+                           <strong class="p-bold">กฤษฎา นลินรัตน์พิพัฒน์</strong>
                       </p>
                       <p class="p-bold">
                           ความถนัด <strong>: มีรูปร่างที่ดี</strong>
@@ -116,7 +116,7 @@
                   </div>
                   <div style="flex: 2; padding-left: 1rem">
                       <p class="p-bold">
-                          ชื่อ-นามสกุล <strong>: นายกฤษตฤณ จันทวงศ์</strong>
+                           <strong class="p-bold">กฤษตฤณ จันทวงศ์</strong>
                       </p>
                       <p class="p-bold">
                           ความถนัด <strong>: ความยืดหยุ่น</strong>
@@ -148,7 +148,7 @@
                   </div>
                   <div style="flex: 2; padding-left: 1rem">
                       <p class="p-bold">
-                          ชื่อ-นามสกุล <strong>: นายคุณภัทร บัวประดิษฐ์</strong>
+                           <strong class="p-bold">คุณภัทร บัวประดิษฐ์</strong>
                       </p>
                       <p class="p-bold">
                           ความถนัด <strong>: รักษากล้ามเนื้อ</strong>
@@ -180,7 +180,7 @@
                   </div>
                   <div style="flex: 2; padding-left: 1rem">
                       <p class="p-bold">
-                          ชื่อ-นามสกุล <strong>: นายทัศไนย แตงพรม</strong>
+                           <strong class="p-bold">ทัศไนย แตงพรม</strong>
                       </p>
                       <p class="p-bold">
                           ความถนัด <strong>: การลดไขมัน</strong>
@@ -212,7 +212,7 @@
                   </div>
                   <div style="flex: 2; padding-left: 1rem">
                       <p class="p-bold">
-                          ชื่อ-นามสกุล <strong>: นายธนนท์ ไทยกูล</strong>
+                           <strong class="p-bold">ธนนท์ ไทยกูล</strong>
                       </p>
                       <p class="p-bold">
                           ความถนัด <strong>: เพิ่มกล้ามเนื้อ</strong>
