--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -1,4 +1,4 @@
-<div class="grid container h-screen">
+<div class="grid-login-signup container h-screen">
   <div class="col-12">
     <div class="text-center font-bold text-white center">
       <h2>Sign Up</h2>
@@ -8,7 +8,6 @@
 
     <div class="margin bg-white bg-login">
       <div class="margin">
-        <br />
         <form [formGroup]="signUp" class="flex flex-column">
           <div class="margin">
             <div class="flex flex-column">
