--- a/src/app/coursetrain/coursetrain.component.html
+++ b/src/app/coursetrain/coursetrain.component.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="margin margin-top-30px">
-          <div class="item-center text-center">
+          <div class="item-center text-center" *ngIf="progarm_data">
             <p-button
               label="ลงทะเบียน"
               styleClass="custom-button-blue-login"
