--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -103,7 +103,7 @@
   [style]="{ width: '300px', textAlign: 'center' }"
 >
   <div class="header-dialog">
-    <h2>pasword ไม่ถูกต้อง</h2>
+    <h2>password ไม่ถูกต้อง</h2>
   </div>
   <div class="flex justify-content-center gap-3">
     <p-button
